# GameOfLife

./: .gitignore  CMakeLists.txt  Makefile
cpu/: main.cc  map.cc  map.hh
include/: gol-cpu.hh  gol-gpu.hh
src/: gol-cpu-parallel.cc  gol-cpu.cc  map.cc  map.hh
src/bench/: CMakeLists.txt  bench.cc
src/bit-cpu/: CMakeLists.txt  bit-cpu-parallel.cc  bit-cpu.cc  map.cc  map.hh
src/bit-gpu/: CMakeLists.txt  bit-gpu.cu  main.cc
src/cpu/: CMakeLists.txt  gol-cpu-parallel.cc  gol-cpu.cc  map.cc  map.hh
src/gol-cpu/: CMakeLists.txt  gol-cpu.cc  gol-cpu.hh  main.cc  map.cc  map.hh
src/gol-gpu/: CMakeLists.txt  gol-gpu.cu  main.cc
src/gpu/: CMakeLists.txt  gol-gpu.cu  gol-gpu.hh
src/gui/: callbacks.cc  callbacks.hh  gui.cu  gui.hh
src/lut-cpu/: CMakeLists.txt  lut-cpu-parallel.cc  lut-cpu.cc  map.cc  map.hh
tests/: blinker  block  glider
